--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -3,7 +3,7 @@ OBJDUMP:=avr-objdump
 SIZE:=avr-size
 
 AVRDUDE:=avrdude
-AVRDUDE_MCU:=t26
+AVRDUDE_MCU:=t861a
 AVRDUDE_PORT:=usb
 AVRDUDE_PROG:=avrisp2
 AVRDUDE_SPEED:=1
@@ -11,12 +11,13 @@ AVRDUDE_SPEED_SLOW:=10
 
 # Fuses: ext-high-freq-crystal-4ms; BOD-4V
 LFUSE:=0xEF
-HFUSE:=0xF4
+HFUSE:=0xCC
+EFUSE:=0xFF
 
 AVR_CPU_FREQUENCY_HZ:=16000000
 
 NAME:=rpmcontrol
-TARGET:=avr-attiny26
+TARGET:=avr-attiny861a
 RELEASEDIR:=target/$(TARGET)/release
 HEX:=$(RELEASEDIR)/$(NAME).hex
 ELF:=$(RELEASEDIR)/$(NAME).elf
@@ -56,7 +57,7 @@ avrdude:
 fuses:
 	$(AVRDUDE) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROG) \
 		-B $(AVRDUDE_SPEED_SLOW) -p $(AVRDUDE_MCU) \
-		-U lfuse:w:$(LFUSE):m -U hfuse:w:$(HFUSE):m
+		-U lfuse:w:$(LFUSE):m -U hfuse:w:$(HFUSE):m -U efuse:w:$(EFUSE):m
 
 flash: $(HEX)
 	$(AVRDUDE) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROG) \
