Add support for debugWire

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -2,6 +2,9 @@ OBJCOPY:=avr-objcopy
 OBJDUMP:=avr-objdump
 SIZE:=avr-size
 
+DWDEBUG:=dwdebug
+DWDEBUG_PORT:=ttyUSB0
+
 AVRDUDE:=avrdude
 AVRDUDE_MCU:=t861a
 AVRDUDE_PORT:=usb
@@ -9,9 +12,9 @@ AVRDUDE_PROG:=avrisp2
 AVRDUDE_SPEED:=1
 AVRDUDE_SPEED_SLOW:=10
 
-# Fuses: ext-high-freq-crystal-4ms; BOD-4V
+# Fuses: ext-high-freq-crystal-4ms; BOD-4V; debugWire
 LFUSE:=0xEF
-HFUSE:=0xCC
+HFUSE:=0x8C
 EFUSE:=0xFF
 
 AVR_CPU_FREQUENCY_HZ:=16000000
@@ -19,12 +22,16 @@ AVR_CPU_FREQUENCY_HZ:=16000000
 NAME:=rpmcontrol
 TARGET:=avr-attiny861a
 RELEASEDIR:=target/$(TARGET)/release
+BIN:=$(RELEASEDIR)/$(NAME).bin
 HEX:=$(RELEASEDIR)/$(NAME).hex
 ELF:=$(RELEASEDIR)/$(NAME).elf
 DASM:=$(RELEASEDIR)/$(NAME).dasm
 
-all: $(HEX) $(DASM)
+all: $(BIN) $(DASM)
 	$(SIZE) --format=SysV $(ELF)
+
+$(BIN): $(HEX)
+	$(OBJCOPY) -I ihex -O binary $(HEX) $(BIN)
 
 $(HEX): $(ELF)
 	$(OBJCOPY) -R.eeprom -O ihex $(ELF) $(HEX)
@@ -44,22 +51,26 @@ dasm: $(DASM)
 clean:
 	cargo clean
 
-reset:
-	$(AVRDUDE) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROG) \
-		-B $(AVRDUDE_SPEED_SLOW) -p $(AVRDUDE_MCU) \
-		-U signature:r:/dev/null:i -qq
-
-avrdude:
+isp:
 	$(AVRDUDE) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROG) \
 		-B $(AVRDUDE_SPEED_SLOW) -p $(AVRDUDE_MCU) \
 		-t
 
-fuses:
+isp-fuses:
 	$(AVRDUDE) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROG) \
 		-B $(AVRDUDE_SPEED_SLOW) -p $(AVRDUDE_MCU) \
 		-U lfuse:w:$(LFUSE):m -U hfuse:w:$(HFUSE):m -U efuse:w:$(EFUSE):m
 
-flash: $(HEX)
+isp-flash: $(HEX)
 	$(AVRDUDE) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROG) \
 		-B $(AVRDUDE_SPEED) -p $(AVRDUDE_MCU) \
 		-U flash:w:$(HEX)
+
+dw:
+	$(DWDEBUG) 'device $(DWDEBUG_PORT), te'
+
+dw-flash: $(BIN)
+	$(DWDEBUG) 'device $(DWDEBUG_PORT), l $(BIN), te, qr'
+
+dw-gdbserver: $(BIN)
+	$(DWDEBUG) 'device $(DWDEBUG_PORT), reset, te, gdbserver, qr'
