--- a/motmock/firmware/Cargo.toml
+++ b/motmock/firmware/Cargo.toml
@@ -12,13 +12,7 @@ test = false
 bench = false
 
 [dependencies]
-avr-device = { version = "0.6", features = [ "atmega8", "rt" ] }
-
-# The latest releases of `proc-macro2` do not support the rust toolchain that
-# we use.  Thus, we must fix this dependency to an older version where our
-# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
-[build-dependencies.proc-macro2]
-version = "=1.0.79"
+avr-device = { version = "0.7", features = [ "atmega8", "rt" ] }
 
 [profile.dev]
 panic = "abort"
@@ -31,8 +25,8 @@ codegen-units = 1
 lto = "fat"
 opt-level = "s"
 
-#[patch.crates-io]
-#avr-device = { path = "../../avr-device" }
+[patch.crates-io]
+avr-device = { path = "../../../avr-device" }
 
 [lints.clippy]
 undocumented_unsafe_blocks = "warn"
