--- a/firmware/rust-toolchain.toml
+++ b/firmware/rust-toolchain.toml
@@ -1,4 +1,5 @@
 [toolchain]
-channel = "nightly-2025-04-27"
-components = ["rust-src"]
+channel = "nightly-2025-05-30"
+#channel = "nightly"
+components = [ "rust-src", "rustfmt", "clippy" ]
 profile = "minimal"
