--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -12,7 +12,8 @@ test = false
 bench = false
 
 [dependencies]
-avr-device = { version = "0.7", features = [ "attiny861a", "rt" ] }
+#avr-device = { version = "0.7", features = [ "attiny861a", "rt" ] }
+avr-device = { git = "https://github.com/Rahix/avr-device.git", rev = "d935a567049140628de0041d9488b60f9b8f6266", features = [ "attiny861a", "rt" ] }
 curveipo = "1"
 
 [profile.dev]
@@ -26,8 +27,8 @@ codegen-units = 1
 lto = "fat"
 opt-level = "s"
 
-[patch.crates-io]
-avr-device = { path = "../../avr-device" }
+#[patch.crates-io]
+#avr-device = { path = "../../avr-device" }
 
 [lints.clippy]
 undocumented_unsafe_blocks = "warn"
