--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -15,6 +15,7 @@ bench = false
 #avr-device = { version = "0.7", features = [ "attiny861a", "rt" ] }
 avr-device = { git = "https://github.com/Rahix/avr-device.git", rev = "d935a567049140628de0041d9488b60f9b8f6266", features = [ "attiny861a", "rt" ] }
 curveipo = "1"
+avr-int24 = { path = "../avr-int24" }
 
 [profile.dev]
 panic = "abort"
