--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -15,10 +15,10 @@ bench = false
 #avr-device = { version = "0.7", features = [ "attiny861a", "rt" ] }
 avr-device = { git = "https://github.com/Rahix/avr-device.git", rev = "7619231fd51826c484708d1e89269d5dfe56fdd4", features = [ "attiny861a", "rt" ] }
 curveipo = "1"
-#avr-int24 = "1"
-avr-int24 = { git = "https://github.com/mbuesch/avr-int24.git", branch = "main" }
-#avr-q = "1"
-avr-q = { git = "https://github.com/mbuesch/avr-q.git", branch = "main" }
+avr-int24 = "1"
+#avr-int24 = { git = "https://github.com/mbuesch/avr-int24.git", branch = "main" }
+avr-q = "1"
+#avr-q = { git = "https://github.com/mbuesch/avr-q.git", branch = "main" }
 
 [profile.dev]
 panic = "abort"
