--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -13,8 +13,8 @@ bench = false
 
 [dependencies]
 #avr-device = { path = "../../avr-device", features = [ "attiny861a", "rt" ] }
-#avr-device = { version = "0.7", features = [ "attiny861a", "rt" ] }
-avr-device = { git = "https://github.com/Rahix/avr-device.git", rev = "7818a35f63f221e7fa59c9f0b4cf284198f3436e", features = [ "attiny861a", "rt" ] }
+avr-device = { version = "0.8", features = [ "attiny861a", "rt" ] }
+#avr-device = { git = "https://github.com/Rahix/avr-device.git", rev = "7818a35f63f221e7fa59c9f0b4cf284198f3436e", features = [ "attiny861a", "rt" ] }
 
 avr-int24 = "1"
 #avr-int24 = { path = "../../avr-int24" }
