--- a/motmock/firmware/Cargo.toml
+++ b/motmock/firmware/Cargo.toml
@@ -12,8 +12,7 @@ test = false
 bench = false
 
 [dependencies]
-#avr-device = { version = "0.7", features = [ "atmega8", "rt" ] }
-avr-device = { git = "https://github.com/Rahix/avr-device.git", rev = "7619231fd51826c484708d1e89269d5dfe56fdd4", features = [ "atmega8", "rt" ] }
+avr-device = { version = "0.8", features = [ "atmega8", "rt" ] }
 
 [profile.dev]
 panic = "abort"
