Update for new nightly compiler

--- a/firmware/.cargo/config.toml
+++ b/firmware/.cargo/config.toml
@@ -1,6 +1,7 @@
 [build]
 target = "./avr-attiny861a.json"
-rustflags = ["-C", "target-cpu=attiny861a"]
+rustflags = [ "-C", "target-cpu=attiny861a" ]
 
 [unstable]
 build-std = ["core"]
+json-target-spec = true
