--- a/motmock/firmware/.cargo/config.toml
+++ b/motmock/firmware/.cargo/config.toml
@@ -1,6 +1,7 @@
 [build]
 target = "./avr-atmega8.json"
-rustflags = ["-C", "target-cpu=atmega8"]
+rustflags = [ "-C", "target-cpu=atmega8" ]
 
 [unstable]
 build-std = ["core"]
+json-target-spec = true
